# kata

./: Main.hs  Makefile  README  Setup.lhs  kata.cabal
Kata/: Config.hs  Diagnostic.hs  Monad.hs  Pos.hs
Kata/Diagnostic/: Locale.hs
Kata/Functor/: Pointed.hs
doc/: Category.ks  tutorial-transcript.txt
include/: Diagnostics.h
project/: build.properties
src/main/scala/kata/: BreaksWith.scala  CompressedTrie.scala  Fixity.scala  LayoutParsers.scala  Parser.scala  Pretty.scala  Syntax.scala  ThreadLocal.scala  Trie.scala
