name:           kata
version:        0.1.1
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://comonad.com/reader
category:       Language
synopsis:       Tools for manipulating Kata source code
description:    Tools for manipulating Kata source code
copyright:      (c) 2010 Edward A. Kmett
build-type:     Custom
cabal-version:  >=1.8
tested-with:    GHC==6.10.4
data-files:     LICENSE po/en@lolcat.po
extra-source-files: README Makefile lolcat.pl po/kata.pot po/en@lolcat.po include/Diagnostics.h

executable kata
  include-dirs: include
  ghc-options: -Wall
  build-depends:
    base >= 4 && < 6, 
    bytestring >= 0.9.1.4 && < 0.10,
    mtl >= 1.1 && < 1.2,
    rope >= 0.6.1 && < 0.7,
    cmdargs >= 0.6.8 && < 0.7,
    filepath >= 1.1.0.2 && < 1.2,
    directory >= 1.0.0.3 && < 1.1,
    i18n >= 0.3 && < 0.4,
    terminfo >= 0.3.1.1 && < 0.4
  main-is: Main.hs
  other-modules:
    Kata.Config
